--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lecture: Control Flow</h1>
-    <!-- <script src="./control-flow.js"></script> -->
+    <script src="./control-flow.js"></script>
     <script src="./loops.js"></script>
 </body>
 </html>
